--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"remotedev": "remotedev --hostname=localhost --port=5678",
+		"remotedev": "remotedev --hostname=localhost --port=8000",
 		"test": "jest"
 	},
 	"dependencies": {
@@ -22,7 +22,8 @@
 		"babel-jest": "20.0.3",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12",
-		"remote-redux-devtools": "0.5.0"
+		"remote-redux-devtools": "0.5.0",
+		"remotedev-server": "^0.2.3"
 	},
 	"jest": {
 		"preset": "react-native"
