--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"remotedev": "remotedev --hostname=localhost --port=5678",
+		"remotedev": "remotedev --hostname=localhost --port=8000",
 		"test": "jest"
 	},
 	"dependencies": {
+		"es6-symbol": "^3.1.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-navigation": "1.1.197",
@@ -22,7 +23,8 @@
 		"babel-jest": "20.0.3",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12",
-		"remote-redux-devtools": "0.5.0"
+		"remote-redux-devtools": "0.5.0",
+		"remotedev-server": "^0.2.3"
 	},
 	"jest": {
 		"preset": "react-native"
