--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"es6-symbol": "^3.1.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-navigation": "1.1.197",
