--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"remotedev": "remotedev --hostname=localhost --port=5678",
+		"remotedev": "remotedev --hostname=localhost --port=8000",
 		"test": "jest"
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
-		"react-native-navigation": "^1.1.198",
+		"react-native-navigation": "^1.1.205",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-loop": "^3.1.2",
 		"redux-remotedev": "^0.3.0",
 		"yarn": "^0.27.5"
 	},
 	"devDependencies": {
-		"babel-jest": "20.0.3", 
+		"babel-jest": "20.0.3",
 		"jest": "20.0.4",
-		"remote-redux-devtools": "0.5.0",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"react-test-renderer": "16.0.0-alpha.12",
+		"remote-redux-devtools": "^0.5.12",
+		"remotedev-server": "^0.2.3"
 	},
 	"jest": {
 		"preset": "react-native"
